--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         <div id="second">NA</div>
     </div>
     </div>
+
+    <footer>
+        Created By : Sourav Kumar Ojha
+    </footer>
     
     <script>
     var countDate = new Date('Jan 1, 2020 00:00:00').getTime();
