--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="theme-color" content="rgb(199,84,187)" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>2020 NewYear Countdwon. </title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
